# automation

./: .gitignore  Cargo.toml  Sheet1.html  automation  buildandrun.sh  info.txt  ips.txt  priority.txt
comm/comm_playlists/: AAJ_COMM_Nov_18_Anna.ply  MDR_COMM_Nov_18_Anna.ply  NGT_COMM_Nov_18_Anna.ply  OSN_COMM_Nov_18_Anna.ply  RTV_COMM_Nov_18_Anna_SAT.ply  TLR_COMM_Nov_18_Anna.ply  ZEB_COMM_Nov_18_Anna.ply  ZEC_COMM_Nov_18_Anna.ply  ZEM_COMM_Nov_18_Anna.ply
comm_playlists/: ABU_COMM_Nov_18_Anna.ply  BBC_ARB_COMM_Nov_18_Anna.ply  DR2_COMM_Nov_18_Anna.ply  HRT_COMM_Nov_18_Anna.ply  ISR_COMM_Nov_18_Anna_BACKUP.ply  ISR_COMM_Nov_18_Anna_PRIMARY.ply  MAF_COMM_Nov_18_Anna.ply  PUK_COMM_Nov_18_Anna.ply  RCL_COMM_Nov_18_Anna.ply  RKH_COMM_Nov_18_Anna.ply  RTL_COMM_Nov_18_Anna.ply  RTV_COMM_Nov_18_Anna_IP.ply  SCH_COMM_Nov_18_Anna.ply  TVA_COMM_Nov_18_Anna.ply  TVB_COMM_Nov_18_Anna.ply  VGN_COMM_Nov_18_Anna.ply  ZEP_COMM_2022_Nov_18_Anna.ply  ZES_COMM_Nov_18_Anna.ply  ZET_COMM_Nov_18_Anna.ply  ZEW_COMM_Nov_18_Anna.ply  ZIN_COMM_Nov_18_Anna.ply  ZTS_COMM_Nov_18_Anna.ply
deleteme/: Sheet1.html
deleteme/resources/: sheet.css
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/backends/: crementcommercials.rs  getcommercials.rs  getcurrenttime.rs  mod.rs  rtvireminders.rs
src/: commercials.rs  main.rs  server.rs
src/utils/: channel_to_udp_stream.rs  channels_hour_and_status.rs  mod.rs
yew/: Cargo.toml  index.html
yew/src/: main.rs
yew/src/app/: mod.rs  rtvi.rs
