[package]
name = "automation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


regex = "*"


reqwest = { version = "*", features = ["blocking"] }


zip-extract = "0.1.1"








tokio = { version = "1.19.2", features = ["sync", "rt", "macros", "rt-multi-thread",  "io-util"] }
serde = { version = "1.0.141", features = ["derive"] }
rand = "0.8.5"

actix-web = "4.2.1"
actix-files = "0.6.2"

serde_json = "1.0.83"

anyhow = "*"