[package]
name = "yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


#yew-router = "0.16.0"
yew = "0.19.3"
#yew-agent = "0.1.0"
web-sys = "0.3.59"

reqwest = {version = "0.11.11", features = ["json"]}

gloo = "0.8.0"

#bincode = "1.3.3"

anyhow = "*"
console_error_panic_hook = "0.1.6"

serde_json = "1.0.83"
serde = { version = "1.0.141", features = ["derive"] }

#hex = "0.4.3"
#rand = { version = "0.8.3", features = ["js"] }
#structs = {path="../structs"}

shared = { path = "../shared" }
